 - (bal) 'pw' should be 'authctxt->pw' in auth1.c spotted by 
   kent@lysator.liu.se
 - (bal) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2002/03/26 11:34:49
     [ssh.1 sshd.8]
     update to recent drafts
   - markus@cvs.openbsd.org 2002/03/26 11:37:05
     [ssh.c]
     update Copyright
   - markus@cvs.openbsd.org 2002/03/26 15:23:40
     [bufaux.c]
     do not talk about packets in bufaux

20020325
 - (stevesk) import OpenBSD <sys/tree.h> as "openbsd-compat/tree.h"
 - (bal) OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2002/03/23 20:57:26
     [sshd.c]
     setproctitle() after preauth child; ok markus@
   - markus@cvs.openbsd.org 2002/03/24 16:00:27
     [serverloop.c]
     remove unused debug
   - markus@cvs.openbsd.org 2002/03/24 16:01:13
     [packet.c]
     debug->debug3 for extra padding
   - stevesk@cvs.openbsd.org 2002/03/24 17:27:03
     [kexgex.c]
     typo; ok markus@
   - stevesk@cvs.openbsd.org 2002/03/24 17:53:16
     [monitor_fdpass.c]
     minor cleanup and more error checking; ok markus@
   - markus@cvs.openbsd.org 2002/03/24 18:05:29
     [scard.c]
     we need to figure out AUT0 for sc_private_encrypt, too
   - stevesk@cvs.openbsd.org 2002/03/24 23:20:00
     [monitor.c]
     remove "\n" from fatal()
   - markus@cvs.openbsd.org 2002/03/25 09:21:13
     [auth-rsa.c]
     return 0 (not NULL); tomh@po.crl.go.jp
   - markus@cvs.openbsd.org 2002/03/25 09:25:06
     [auth-rh-rsa.c]
     rm bogus comment
   - markus@cvs.openbsd.org 2002/03/25 17:34:27
     [scard.c scard.h ssh-agent.c ssh-keygen.c ssh.c]
     change sc_get_key to sc_get_keys and hide smartcard details in scard.c
   - stevesk@cvs.openbsd.org 2002/03/25 20:12:10
     [monitor_mm.c monitor_wrap.c]
     ssize_t args use "%ld" and cast to (long)
     size_t args use "%lu" and cast to (u_long)
     ok markus@ and thanks millert@
   - markus@cvs.openbsd.org 2002/03/25 21:04:02
     [ssh.c]
     simplify num_identity_files handling
   - markus@cvs.openbsd.org 2002/03/25 21:13:51